// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Button should render blue Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-300"
    class="px-9 py-3 m-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 text-black w-5/6 bg-white dark:bg-slate-300"
    color="text-black"
    data-testid="button"
    width="w-5/6"
  >
    Primary
  </button>
</div>
`;

exports[`Default Button should render dark green Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-300"
    class="px-9 py-3 m-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 text-black w-fit bg-white dark:bg-slate-300"
    color="text-black"
    data-testid="button"
  >
    Success
  </button>
</div>
`;

exports[`Default Button should render dark red Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-300"
    class="px-9 py-3 m-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 text-black w-fit bg-white dark:bg-slate-300"
    color="text-black"
    data-testid="button"
  >
    Cancel
  </button>
</div>
`;

exports[`Default Button should render default button when variant is null 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-300"
    class="px-9 py-3 m-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 text-black w-fit bg-white dark:bg-slate-300"
    color="text-black"
    data-testid="button"
  >
    Primary
  </button>
</div>
`;

exports[`Default Button should render green Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-300"
    class="px-9 py-3 m-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 text-black w-5/6 bg-white dark:bg-slate-300"
    color="text-black"
    data-testid="button"
    width="w-5/6"
  >
    Success
  </button>
</div>
`;

exports[`Default Button should render red Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-300"
    class="px-9 py-3 m-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 text-black w-5/6 bg-white dark:bg-slate-300"
    color="text-black"
    data-testid="button"
    width="w-5/6"
  >
    Cancel
  </button>
</div>
`;

exports[`Default Button should render teal Button 1`] = `
<div>
  <button
    background="bg-white dark:bg-slate-300"
    class="px-9 py-3 m-auto shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 text-black w-5/6 bg-white dark:bg-slate-300"
    color="text-black"
    data-testid="button"
    width="w-5/6"
  >
    Login
  </button>
</div>
`;
